Fix z-index

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,5 +4,6 @@
 
   & .wrapper {
     padding: 60px;
+    background: #fff;
   }
 }
