--- a/src/app/components/timeline/timeline.component.scss
+++ b/src/app/components/timeline/timeline.component.scss
@@ -106,6 +106,7 @@ $gray: gray;
       &:hover .timeline_event_content__item__info {
         display: flex;
         opacity: 0.9;
+        z-index: 10;
       }
     }
   }
